        product but used outside it.

      - Allow turning off of XML prologue section.

      - Optimization of TALESMethod by caching compiled expression.
        This speeds SilvaMetadata indexing up by a lot if a fallback
        on default is made, especially in the case of Python
        expressions, as it avoids lots of compilation overhead.

    Bugs Fixed

      - XML serialization should be more consistent now.
 
      - Allow XML export of BasicForm.

  1.4.2
  
    Bugs Fixed

      - Sticky forms should now work correctly in the presence of unicode.
        Encoded data is automatically converted to unicode if the information
        is pulled from the REQUEST form.

  1.4.1

    Bugs Fixed

      - It was not possible to make DateTime fields not required when
        'allow_empty_time' was enabled. Fixed.

  1.4.0

    Features Added

      - Added limited ability to output unicode for selected
        fields. Only works properly in Zope 2.6.x, and the HTML pages
        these forms are in need an output encoding set (such as
        UTF-8, which is also Formulator's default encoding). If
        'unicode' checkbox is checked Formulator will try to interpret
        its input in the Form's encoding (default is UTF-8). It will
        also try to display its values in that encoding. Note that
        only field values and items currently work with unicode -- the
        rest of the textual properties of a field are still stored as
        8-bits. If you make sure that these properties are encoded as
        UTF-8 (or whatever encoding you choose for the form) things
        should be okay, however.

      - Can now also change forms using XML (not just view it).

      - DateTime fields can now optionally input AM/PM.

      - DateTime fields can now optionally be set to allow time to 
        be left empty.

      - 'whitespace_preserve' option on string type fields. If turned on,