@@ -15,6 +15,9 @@ Formulator changes
         on default is made, especially in the case of Python
         expressions, as it avoids lots of compilation overhead.
 
+      - Extra attribute defined for complex fields called 'extra_item', 
+        which allows setting HTML attributes to contained tags.
+
     Bugs Fixed
 
       - XML serialization should be more consistent now.
